--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+# 修改网站全局标题
+title: 三十而立
 email: your-email@domain.com
 author: GitHub User
 
@@ -108,7 +109,7 @@ yat:
 # spacegrey: #353535
 # snowwhite: #ffffff
 #
-# theme_color: snowwhite
+theme_color: snowwhite
 #
 # Custom color as below:
 # theme_color: "#882250"
