--- a/_config.yml
+++ b/_config.yml
@@ -184,6 +184,8 @@ theme_color: snowwhite
 #   subheading_style: null  # Custom subheading style (e.g. color: gold)
 
 # Excerpt settings
+excerpt:
+  text_size: 75      # 设置预览文字数量
 # excerpt:
 #   default_image: /assets/images/default-image.jpeg  # Default image when the image style is not none
 #   image_style: z          # Image layout style (It's value could be none, left, right, top, z, z-reverse)
